# 20260610_vscode_test_debug

./: .gitignore  pyproject.toml
app/: main.py
tests/e2b/: conftest.py  test_base.py
