[project]
name = "20260610-vscode-test-debug"
version = "0.1.0"
description = "FastAPI health-check test workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "debugpy>=1.8.0",
    "uvicorn>=0.30.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
